--- a/exercicios/ex020/fundo006.html
+++ b/exercicios/ex020/fundo006.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
+        /* Shorthand - backgroud
+            color > image > position > repeat > size > attachment
+        
+        */
 
         main {
             width: 400px;
@@ -28,6 +29,22 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa unde id adipisci! Similique, cumque! Id quos, ducimus corporis quibusdam laboriosam ut. Dolorum fugit quidem itaque sit aspernatur. Quasi, sapiente perferendis?
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ea fugit, sequi facilis itaque dolores animi, dicta ipsa voluptate eveniet at? Quibusdam, odit quos? Sapiente veniam vel sint rem laudantium.
         </p>
     </main>
