atualização ex021 tabelas

--- a/exercicios/ex021/tabela02.html
+++ b/exercicios/ex021/tabela02.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -24,6 +25,12 @@
         thead, tfoot {
             background-color: rgb(89, 89, 89);
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(89, 89, 89);
         }
 
         tbody > tr:nth-child(2n) {
@@ -168,5 +175,56 @@
             </tr>
         </tfoot>
     </table>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime sint maiores aliquid amet, quis expedita quae soluta illum nesciunt blanditiis ut eius, porro ullam perferendis tenetur odit libero voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa soluta voluptates labore eius maxime ducimus suscipit illum autem quam, qui, libero ab, natus quia excepturi sunt recusandae amet temporibus?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique cum quidem quo harum incidunt maiores voluptatibus neque ratione perspiciatis, eius ipsum a explicabo, nisi temporibus nihil natus numquam totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque aut voluptatibus odio impedit repudiandae placeat quod fuga deleniti beatae assumenda, illum veniam ex dolores, id quisquam adipisci? Minus, animi.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illo inventore eligendi quaerat architecto, vitae ipsam iusto, itaque nesciunt repudiandae pariatur perspiciatis quidem nobis molestias magnam quisquam tempore minima voluptates.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo beatae sit animi excepturi laboriosam tempore! Nostrum nisi quisquam laboriosam similique cumque minus, quibusdam, rem fugit facilis velit recusandae molestias.
+        </p>
+    </main>
 </body>
 </html>
