--- a/exercicios/ex022/iframe03.html
+++ b/exercicios/ex022/iframe03.html
@@ -36,9 +36,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ab veritatis recusandae quibusdam nam corrupti voluptatibus inventore, odio reprehenderit fugiat, repellat voluptatem harum dolores facilis mollitia, pariatur aliquam itaque quos.
         </p>
         <ul>
-            <li><a href="pagina01.html" target="frame">primeira pagina</a></li>
-            <li><a href="pagina02.html" target="frame">segunda pagina</a></li>
-            <li><a href="pagina03.html" target="frame">terceira pagina</a></li>
+            <li><a href="paginas-extras/pagina01.html" target="frame">primeira pagina</a></li>
+            <li><a href="paginas-extras/pagina02.html" target="frame">segunda pagina</a></li>
+            <li><a href="paginas-extras/pagina03.html" target="frame">terceira pagina</a></li>
         </ul>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique cumque fuga eius debitis dignissimos corrupti consequuntur, expedita quidem vero illo, iusto veritatis labore est veniam ipsam reprehenderit iste repellat. Ut.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aperiam nulla non laudantium debitis ad similique impedit eligendi, eum saepe. Dolor, labore? Ducimus accusamus ut veniam itaque laudantium corporis debitis!
